--- a/polls/templates/polls/client_list.html
+++ b/polls/templates/polls/client_list.html
@@ -8,7 +8,7 @@
     <h5>Lista klientów</h5>
     <ul>
     {% for client in object_list %}
-    <li>{{client.first_name}} {{client.last_name}}</li>
+    <li><a href="{%  url 'polls:client_detail' client.id %}">{{client.first_name}} {{client.last_name}}</a></li>
     {% endfor %}
     </ul>
 </body>
