--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,4 +10,5 @@
   {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 {% endblock %}
