--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
     <p><a href="{% url 'polls:client_list' %}">Client list</a></p>
+    <p><a href="{% url 'polls:car_list' %}">Car list</a></p>
+    <p><a href="{% url 'polls:insurance_list' %}">Insurance list</a></p>
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in</p>
