added posibility to add cars and insurance

--- a/polls/templates/polls/insurance_list.html
+++ b/polls/templates/polls/insurance_list.html
@@ -17,5 +17,6 @@
     </li>
     {% endfor %}
     </ul>
+    <p><a href="{% url 'polls:insurance_create' %}">Add Insurance</a></p>
 </body>
 </html>
