added bootstrap, recreated clientlistview, added edit button to table, added sorting by policy end date

--- a/polls/templates/polls/client_detail.html
+++ b/polls/templates/polls/client_detail.html
@@ -20,8 +20,9 @@
         {{ car.insurance_policy.policy_number }}
     </li>
         </br>
+        <p><a href="{% url 'polls:client_edit' object.id car.id%}"> Edit </a></p>
     {% endfor %}
 
-    <p><a href="{% url 'polls:client_edit' object.id %}"> Edit </a></p>
+
 </body>
 </html>
