--- a/polls/templates/polls/client_form.html
+++ b/polls/templates/polls/client_form.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,3 +14,4 @@
 </form>
 </body>
 </html>
+{% endblock %}
