--- a/polls/templates/polls/client_detail.html
+++ b/polls/templates/polls/client_detail.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Siema Siema</title>
 </head>
+{% block content %}
 <body>
-    <p><a href="{% url 'home' %}"> Home </a></p>
-    <div class='body'>{{ object.first_name }} </div>
-    <div class='body'>{{ object.last_name }} </div>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5e5959;">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class ="nav-link" href="{% url 'home' %}"> Home </a>
+            </li>
+        </ul>
+    </nav>
+    <div class='body'>{{ object.first_name }} {{ object.last_name }} </div>
     </br>
     <div>Samochody:</div>
     {% for car in car_list %}
@@ -20,9 +27,10 @@
         {{ car.insurance_policy.policy_number }}
     </li>
         </br>
-        <p><a href="{% url 'polls:client_edit' object.id car.id%}"> Edit </a></p>
+        <p><a class="btn btn-outline-success" href="{% url 'polls:car_edit' car.id%}" role="button">Edytuj</a></p>
     {% endfor %}
 
 
 </body>
 </html>
+{% endblock %}
