--- a/polls/templates/polls/client_form.html
+++ b/polls/templates/polls/client_form.html
@@ -9,7 +9,7 @@
 <body>
     <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form.as_table }}
   <input type="submit"value="Zapisz">
 </form>
 </body>
