--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,28 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-    <p><a href="{% url 'polls:client_list' %}">Client list</a></p>
-    <p><a href="{% url 'polls:car_list' %}">Car list</a></p>
-    <p><a href="{% url 'polls:insurance_list' %}">Insurance list</a></p>
-    <p><a href="{% url 'logout' %}">Log Out</a></p>
+    <nav class="navbar navbar-expand-lg navbar-light"
+         style="background-color: #2e2d2d;">
+    <ul class="navbar-nav mr-auto">
+        <span class="navbar-text">Hi {{ user.username }}!</span>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'polls:client_list' %}">Client list</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'polls:car_list' %}">Car list</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'polls:insurance_list' %}">Insurance list</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+    </ul>
+    </nav>
 {% else %}
-  <p>You are not logged in</p>
+    <<p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
 {% endif %}
+
+    </div>
 {% endblock %}
