--- a/polls/templates/polls/car_list.html
+++ b/polls/templates/polls/car_list.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,3 +25,4 @@
     <p><a href="{% url 'polls:car_create' %}">Add car</a></p>
 </body>
 </html>
+{% endblock %}
