--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-light"
-         style="background-color: #2e2d2d;">
+         style="background-color: #5e5959;">
     <ul class="navbar-nav mr-auto">
         <span class="navbar-text">Hi {{ user.username }}!</span>
         <li class="nav-item">
