--- a/polls/templates/polls/client_list.html
+++ b/polls/templates/polls/client_list.html
@@ -24,24 +24,26 @@
         <th> Ważność polisy</th>
         <th></th>
     </tr>
+    {% for client in object_list %}
         {% for car in car_list %}
-            {% for client in object_list %}
-                    {% if client.id == car.insured_car.owner_id %}
-                        <tr>
-                            <td>{{ car.insured_car.owner.first_name }} {{ car.insured_car.owner.last_name }}</td>
-                            <td>{{ car.insured_car.mark }}</td>
-                            <td>{{ car.insured_car.production_year }}</td>
-                            <td>{{ car.insured_car.plate_numbers }}</td>
-                            <td>{{ car.policy_number}}</td>
-                            <td>{{ car.policy_end_date}}</td>
-                        <td>
-                            <a class="btn btn-outline-success" href="{% url 'polls:client_detail' client.id car.id%}" role="button">Edytuj</a>
-                            <a class="btn btn-outline-warning" href="{% url 'polls:client_detail' client.id car.id%}" role="button">Wiadomość</a>
-                        </td>
-                        </tr>
-                    {% endif %}
-            {% endfor %}
+            {% if client.owned_car_id == car.id %}
+                <tr>
+                <td>{{ client.first_name }} {{ client.last_name }}</td>
+                <td>{{ car.mark }}</td>
+                <td>{{ car.production_year }}</td>
+                <td>{{ car.plate_numbers }}</td>
+                <td>{{ car.policy_number}}</td>
+                <td>{{ car.policy_end_date}}</td>
+                <td>
+                    <a class="btn btn-outline-success" href="{% url 'polls:client_detail'  client.id car.id %}" role="button">Edytuj</a>
+                </td>
+            {% endif %}
+            </tr>
         {% endfor %}
+        {% if client.owned_car_id == None%}
+            <td>{{ client.first_name }} {{ client.last_name }}</td>
+        {% endif %}
+    {% endfor %}
     </table>
 </body>
 <style>
